@@ -23,10 +23,17 @@ if (empty($scriptProperties['download'])) {
     $file = $scriptProperties['download'];
     $f = $modx->getOption('core_path').'export/properties/'.$file;
 
-    if (empty($scriptProperties['id'])) return '';
-    $propertySet = $modx->getObject('modPropertySet',$scriptProperties['id']);
-    $name = $propertySet->get('name');
-    $name = strtolower(str_replace(' ','-',$name));
+    if (empty($scriptProperties['id'])) {
+        $name = 'default';
+    } else {
+        $propertySet = $modx->getObject('modPropertySet',$scriptProperties['id']);
+        if (empty($propertySet)) {
+            $name = 'unknown';
+        } else {
+            $name = $propertySet->get('name');
+            $name = strtolower(str_replace(' ','-',$name));
+        }
+    }
 
     if (!is_file($f)) return $o;
 
